service/k8s/booking-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: ticket-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: booking-service
          image: ghcr.io/onlydevelop/ticket-master/booking-service:latest
          ports:
            - containerPort: 8081
          readinessProbe:
            tcpSocket:
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
