service/k8s/booking-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: ticket-master
spec:
  selector:
    app: booking-service
  ports:
    - port: 8081
      targetPort: 8081
