service/k8s/booking-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: booking-service
  namespace: ticket-master
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /bookings
            pathType: Prefix
            backend:
              service:
                name: booking-service
                port:
                  number: 8081
